apps/online-shop/base/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: online-shop-frontend
  namespace: online-shop
  annotations:
    argocd.argoproj.io/sync-wave: "3"

spec:
  replicas: 2

  selector:
    matchLabels:
      app: online-shop-frontend

  template:
    metadata:
      labels:
        app: online-shop-frontend

    spec:
      containers:
        - name: frontend
          image: yazeeth/onlineshop-frontend:v1.0.13

          ports:
            - containerPort: 80
