apps/online-shop/base/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: online-shop-backend
  namespace: online-shop

spec:
  type: ClusterIP
  selector:
    app: online-shop-backend

  ports:
    - protocol: TCP
      port: 5050
      targetPort: 5050
