apps/online-shop/base/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: online-shop-frontend
  namespace: online-shop

spec:
  type: ClusterIP

  selector:
    app: online-shop-frontend

  ports:
    - port: 80
      targetPort: 80
