apps/online-shop/base/postgres-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: postgres
  namespace: online-shop

spec:
  clusterIP: None

  ports:
    - port: 5432
      targetPort: 5432

  selector:
    app: postgres
