apps/online-shop/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: online-shop-ingress
  namespace: online-shop
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - shop.yazeeth.com
      secretName: store-yazeeth-org-lk-tls

  rules:
    - host: shop.yazeeth.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: online-shop-backend
                port:
                  number: 5050
          - path: /uploads
            pathType: Prefix
            backend:
              service:
                name: online-shop-backend
                port:
                  number: 5050
          - path: /
            pathType: Prefix
            backend:
              service:
                name: online-shop-frontend
                port:
                  number: 80
